--- a/index.html
+++ b/index.html
@@ -403,6 +403,9 @@
     });
   }, 1000);
 </script>
+<a href="https://bethuel12345.github.io/controller/" target="_blank">
+  <img src="https://cdn-icons-png.flaticon.com/512/93/93634.png" alt="WiFi Icon" width="50" height="50">
+</a>
 
 </body>
 </html>
